tests/ui/where-clauses/where-clause-constraints-are-local-for-trait-impl.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/where-clause-constraints-are-local-for-trait-impl.rs:18:22
   |
LL |         require_copy(self.x);
   |         ------------ ^^^^^^ the trait `Copy` is not implemented for `T`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `require_copy`
  --> $DIR/where-clause-constraints-are-local-for-trait-impl.rs:1:20
   |
LL | fn require_copy<T: Copy>(x: T) {}
   |                    ^^^^ required by this bound in `require_copy`
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo<T> for Bar<T> {
   |       +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
